health bar alignment, fixed jumping in air.

--- a/Styles.css
+++ b/Styles.css
@@ -158,23 +158,23 @@ body {
   position: absolute;
 }
 
-/* #HealthBar {
+#HealthBar {
+  height: 100%;
   font-size: 2em;
   font-weight: bold;
   background-color: #1eff00;
-  padding: 10px;
   border: 2px solid #ff0000;
   display: inline-block;
   border-radius: 100px;
   text-align: center;
-  width: 200px;
-  top: 25px;
-  left: 300px;
-  position: absolute;
+  position: inherit;
+  padding: 10px;
+  left: 90px;
 }
 
 #HealthBarText {
-  font-size: 2em;
+  height: 100%;
+  font-size: 135%;
   font-weight: bold;
   color: #ff0000;
   padding: 10px;
@@ -182,32 +182,17 @@ body {
   display: inline-block;
   min-width: 40px;
   border-radius: 100px;
-  text-align: center;
-  top: 15px;
-  left: 175px;
-  position: absolute;
-} */
-
-.health-container {
-    width: 300px;
-    height: 30px;
-    top: 10px;
-    left: 250px;
-    border: 2px solid black;
-    background-color: #ddd;
-    border-radius: 5px;
-    overflow: hidden;
-    position: absolute;
+  text-align: inherit;
 }
 
-.HealthBar {
-    height: 100%;
-    width: 100%;
-    background-color: rgb(43, 194, 83); 
-    transition: width 0.5s linear; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#health-container {
+    width: 300px;
+    height: 30px;
+    top: 18px;
+    left: 180px;
+    border: 2px solid rgba(0, 0, 0, 0);
+    background-color: #dddddd00;
+    border-radius: 5px;
     position: absolute;
 }
 
